--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^2.0",
         "guzzlehttp/guzzle": "^7.8",
         "symfony/console": "6.3.*",
         "symfony/dotenv": "6.3.*",
@@ -15,6 +16,7 @@
         "symfony/property-access": "6.3.*",
         "symfony/runtime": "6.3.*",
         "symfony/serializer": "6.3.*",
+        "symfony/validator": "6.3.*",
         "symfony/yaml": "6.3.*"
     },
     "config": {
@@ -64,5 +66,9 @@
             "allow-contrib": false,
             "require": "6.3.*"
         }
+    },
+    "require-dev": {
+        "phpspec/phpspec": "^7.5",
+        "phpstan/phpstan": "^1.11"
     }
 }
