--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -17,6 +17,8 @@ framework:
     #fragments: true
     php_errors:
         log: true
+    serializer:
+        enable_annotations: true
 
 when@test:
     framework:
